I uncommented a couple of files and folder to allow a contributor refactor a couple of the files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-mysite/settings.py
+# mysite/settings.py
 homeapp/tests.py
-homeapp/admin.py
-homeapp/models.py
+# homeapp/admin.py
+# homeapp/models.py
